<resources>
    <string name="app_name" translatable="false">Rahma</string>
    <string name="Donor">Donor</string>
    <string name="Beneficiary">Beneficiary</string>
    <string name="organization">"Charity"</string>
    <string name="loginhintname">"Username "</string>
    <string name="loginhintpassword">"Password "</string>
    <string name="Enter">Enter</string>
    <string name="forgetPass">forget password ?</string>
    <string name="Phoneunmberhint">Phone Number</string>
    <string name="EmailHint">Email Adress</string>
    <string name="locationhint">Location</string>
    <string name="haveAcount">I have Acount</string>
    <string name="Login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_home">Home</string>
    <string name="Setting">Setting</string>
    <string name="Aboutus">About us</string>
    <string name="Profile">Profile</string>
    <string name="AboutUs">About us</string>
    <string name="Suggestion">Suggestion</string>
    <string name="Sponser">Sponsers</string>
    <string name="Exit">Exit</string>
    <string name="Writhere">Write Here</string>
    <string name="SendMsg">Send Message</string>
    <string name="Send">Send</string>
    <string name="Language">Language</string>
    <string name="Contact_Us">Contact us</string>
    <string name="addDonation">Add new Donation</string>
    <string name="addressList">Adress List</string>
    <string name="donationsList">Donation List</string>
    <string name="Food">Food</string>
    <string name="accesories">Accesories</string>
    <string name="FoodQuantityTxt">this food is enough for</string>
    <string name="morethanten">"more Than "</string>
    <string name="Lessthanten">Less than family</string>
    <string name="UploadPhoto">Upload Photo</string>
    <string name="AddnewLocation">Add new Location</string>
    <string name="DonationLocation">Donation Location</string>
    <string name="AccesriesQuantityTxt">Number of Accesries</string>
    <string name="morethanthree">More Than 3</string>
    <string name="lessthanthree">Less Than Three</string>
    <string name="Publish">Publish</string>
    <string name="LocationName">Location Name</string>
    <string name="HomeNo">Home Number</string>
    <string name="FloorNumber">Floor Number</string>
    <string name="Edit">Edit</string>
    <string name="FoodQuatity">Food Quantity</string>
    <string name="DummyLong">this Area bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="Delete">Delete</string>
    <string name="Report">Reporting a Beneficiary</string>
    <string name="ImageTitle">ImageTitle</string>
    <string name="yes_Recived">yes Recived</string>
    <string name="Main">Main</string>
    <string name="Map">Map</string>
    <string name="DonationDetails">Donation Details</string>
    <string name="DonationDescribtion">Donation Describtion</string>
    <string name="ReciveDonation">I took it</string>
    <string name="numberExist">This number or Email is exist </string>
    <string name="namePlease">Please enter your name</string>
    <string name="emailPlease">Please Enter your Email</string>
    <string name="passPlease">Please Enter your Password</string>
    <string name="notMatching">The two password not Matching</string>
    <string name="SomethingWrong">Something went wrong</string>
    <string name="SendEmail">Send Email</string>
    <string name="ErrorEmail">This Email is not Registed</string>
    <string name="VertificationCode">Vertification code had been send</string>
    <string name="NoChangeHappen">There is no Change happen</string>
    <string name="enterPlace">Search for Adress</string>
    <string name="numberPlease">Please Enter your Number</string>
    <string name="published">your Donation had been published</string>
    <string name="Wtritelocationhere">Write Location Here</string>
    <string name="Wtritefloorhere">Write floor number here</string>
    <string name="WtriteHomehere">Write home number here</string>
    <string name="Add">Add</string>
    <string name="Home">House</string>
    <string name="Block">Block</string>
    <string name="Cancell">Cancel</string>
    <string name="ChooseAdrees">Choose Adress Please</string>
    <string name="Block_type">Place type</string>
    <string name="LocationDescribtion">Location Description</string>
    <string name="ConatctNumber">Contact Number</string>
    <string name="ConatctNumber1">Contact number (optional)</string>
    <string name="WriteConatctNumber">Write Contact Number Here</string>
    <string name="BlockNo">Block Number</string>
    <string name="WriteblockNoHere">Write Block no here</string>
    <string name="PartmentNo">Apartment Number</string>
    <string name="WtritePartmentNohere">Write aPartment Number here</string>
    <string name="organizationNo">Organization Number</string>
    <string name="organizationName">Organization Name</string>
    <string name="WtriteOrganizationNohere">Write Organziation Number Here</string>
    <string name="WtriteOrganizationNamehere">Write Organziation Name Here</string>
    <string name="SelectAdress">Select Adress</string>
    <string name="Quatity">Quantity</string>
    <string name="CurrentLocatio">Current location</string>
    <string name="DonationType">Donation Type</string>
    <string name="DonationQuantity">Donation Quantity</string>
    <string name="More">More</string>
    <string name="iwantit">I want it</string>
    <string name="locationtype">Location Type</string>
    <string name="Deliver">Map direction</string>
    <string name="AddnewEmployee">Add New Empoyee</string>
    <string name="EmployeeList">Empolyees List</string>
    <string name="EmloyeeList">Employee List</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="Arabic">العربية</string>
    <string name="Ennglish">English</string>
    <string name="Alert">Alert</string>
    <string name="LanguageMessage">Are you sure you want to Change Language ?</string>
    <string name="yes">yes</string>
    <string name="AlertMSG">Please do not disturb the donor and just take donate Displayed only</string>
    <string name="Confirm">Confirm</string>
    <string name="didntwant">I didn\'t want it</string>
    <string name="ReportComplete">Report Complete</string>
    <string name="PostDeleted">Post Deleted</string>
    <string name="EnoughforoneFamilyDonationReferedByyou">Enough for one Family Donation Refered By You</string>
    <string name="EnoughforMoreFamilyDonationReferedByyou">Enough For More Than Family Donation Referred By you</string>
    <string name="YourEnoughForOneFamilyDoation">Your Enough For One Family Doation</string>
    <string name="Quran">
وَتَعَاوَنُوا عَلَى الْبِرِّ وَالتَّقْوَىٰ ۖ وَلَا تَعَاوَنُوا عَلَى الْإِثْمِ وَالْعُدْوَانِ ۚ وَاتَّقُوا اللَّهَ ۖ إِنَّ اللَّهَ شَدِيدُ الْعِقَابِ  \u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020  \u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020 وَتَعَاوَنُوا عَلَى الْبِرِّ وَالتَّقْوَىٰ ۖ وَلَا تَعَاوَنُوا عَلَى الْإِثْمِ وَالْعُدْوَانِ ۚ وَاتَّقُوا اللَّهَ ۖ إِنَّ اللَّهَ شَدِيدُ  الْعِقَابِِ</string>
    <string name="LoadDonations">Load Donations..</string>
    <string name="Donation">Donation</string>
    <string name="EmployeeAdded">Employe Added</string>
    <string name="PromoCode">Invitation Code</string>
    <string name="Reset">Reset</string>
    <string name="WrongCode">Wrong Vertification Code</string>
    <string name="PassHadbeenEditted">Password Had been edited</string>
    <string name="Ihaveone">I have Vertification Code</string>
    <string name="CreateNewAccount">Create new account?</string>
    <string name="Updated">Your Donation had been updated</string>
    <string name="yourMSGHadbeenRecived">Your message Had been sent</string>
    <string name="PleaseFillEmptyFields">Please Fill Empty Fields</string>
    <string name="EmployeeDeleted">Employee had been deleted</string>
    <string name="DeleteConfirmation">Are you sure you want to delete this employee</string>
    <string name="Accounthadbeenedited">Account had been edited</string>
    <string name="Follow_us">Follow us</string>
    <string name="share">Share</string>
    <string name="Evaluation">Evaluation</string>
    <string name="AdressUpdated">Adress had been updated</string>
    <string name="NoData">No data avaliable now</string>
    <string name="EnoughforoneFamilyDonation">Enough for one family Donation</string>
    <string name="EnoughforMoreFamilyDonation">Enough for more family donation</string>
    <string name="PromoCodee">Promo Code</string>
    <string name="Dataisnotcorrect">Access Data is not correct</string>
    <string name="loading">loading..</string>
    <string name="Next">Next</string>
    <string name="MSGtext">Message text</string>
    <string name="MSGTitle">Message tittle</string>
    <string name="organizationloc">Business</string>
    <string name="pleasaddlocationmarker">Please add location marker</string>
    <string name="addAdressReaded">I have read how to add an address</string>
    <string name="Done">Done</string>
    <string name="Noofusersreferedbyyou">Number of users Refered by you</string>
    <string name="totalnumberdonationsreferedbyyou">Total number donation referd by you</string>
    <string name="DonationType1">Donation type :</string>
    <string name="Description">Description</string>
    <string name="VertificationCode1">Vertification Code</string>
    <string name="CLOSE">Close</string>
    <string name="no_of_charity_refered_by_you">number of charity refered by you</string>
    <string name="AccountbenefitesReferedByYou">Number of benefers refered by you</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Terms_Condition"> Agree with Terms and Condition</string>
    <string name="youhavetoAccepttermsandcondition">You have to accept terms and condition</string>
    <string name="Registration">Create new account</string>
    <string name="loginhintrepassword">Confirm password</string>
    <string name="ErrorEmail1">This email not found</string>
    <string name="inviationtxt1">It is recommended to share the application through social media by recording video or voice of how to register and use the application and then send it with confirmation of registration in the application through your code or to take the phone of people you know and download and register then explain to them how to use the app live. \n Download link:</string>
    <string name="inviationtxt2">Invitation code:</string>
    <string name="enterance">Building entrance</string>

    <string-array name="Block_type">
        <item>@string/Home</item>
        <item>@string/Block</item>
        <item>@string/organizationloc</item>

    </string-array>

</resources>
