<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Nav_Home"
            android:icon="@drawable/home2"
            android:title="@string/main_home" />
        <item
            android:id="@+id/nav_Setting"
            android:icon="@drawable/setting"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_AboutUs"
            android:icon="@drawable/about_us"
            android:title="@string/AboutUs" />
        <item
            android:id="@+id/nav_Suggestion"
            android:icon="@drawable/suggestions"
            android:title="@string/Suggestion" />
        <item
            android:id="@+id/nav_ContactUs"
            android:icon="@drawable/suggestions"
            android:title="@string/Contact_Us" />
        <item
            android:id="@+id/nav_Sponsers"
            android:icon="@drawable/sponsors"
            android:title="@string/Sponser" />
        <item
            android:id="@+id/nav_Exit"
            android:icon="@drawable/exit"
            android:title="@string/Exit" />
    </group>

</menu>
